--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <link rel="stylesheet" href="build/css/vendor.css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
-    <title>Weather</title>
+    <title>Doctor Finder</title>
   </head>
   <body>
     <div class="container">
-      <h1>Get Weather Conditions From Anywhere!</h1>
-      <label for="location">Enter a location:</label>
-      <input id="location" type="text">
-      <button class="btn-success" id="weatherLocation">Get Current Humidity!</button>
+      <h1>Find a doctor!</h1>
+      <label for="userInput">Enter a medical condition:</label>
+      <input id="userInput" type="text">
+      <button id="userSubmit" class="btn-success" >Find doctors</button>
       <div id="showDoctors"></div>
     </div>
   </body>
