--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <html>
   <head>
     <link rel="stylesheet" href="build/css/vendor.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="build/css/styles.css">
     <script src="build/js/vendor.min.js"></script>
-    <script type="text/javascript" src="build/js/app.js"></script>
+     <script type="text/javascript" src="build/js/app.js"></script>
     <title>Doctor Finder</title>
   </head>
   <body>
     <div class="container">
-      <h1>Find a doctor!</h1>
-      <label for="userInput">Enter a medical condition:</label>
-      <input id="userInput" type="text">
-      <button id="userSubmit" class="btn-success" >Find doctors</button>
+      <h1 id="pageTitle">DocFinder</h1>
+      <input id="userInput" class="form-control" type="text" placeholder="enter a medical condition...">
+      <button id="userSubmit" class="btn btn-sm">Search</button>
       <div id="showDoctors"></div>
     </div>
   </body>
