style content and complete styling of landing page using sass

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 id="pageTitle">DocFinder</h1>
+      <h1 id="pageTitle"><span class='colorSplash'>D</span>oc<span class='colorSplash'>F</span>inder</h1>
       <input id="userInput" class="form-control" type="text" placeholder="enter a medical condition...">
       <button id="userSubmit" class="btn btn-sm">Search</button>
       <div id="showDoctors"></div>
